[gd_scene load_steps=8 format=3 uid="uid://c0q6kx1seg7t3"]

[ext_resource type="Texture2D" uid="uid://chgvgrrxgbsk1" path="res://Sprites/Enemies/BoomBox_Enemy-Sheet.png" id="1_fh41d"]
[ext_resource type="Script" path="res://Scenes/CharacterScenes/bouncer_enemy.gd" id="1_ov63h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqu8v"]
atlas = ExtResource("1_fh41d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx53m"]
atlas = ExtResource("1_fh41d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_41vj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqu8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx53m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysiew"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s3kru"]
radius = 12.3333
height = 28.0

[node name="BouncerEnemy" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(136, 96)
scale = Vector2(3, 3)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ov63h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_41vj7")
autoplay = "default"
frame = 1
frame_progress = 0.11403

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_ysiew")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_s3kru")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
